--- a/project.json
+++ b/project.json
@@ -4,14 +4,14 @@
         "title": "Html5",
         "src":"../img/html5.png",
         "description": {
-          "main-article" : "HTML5 — последняя версия стандарта HTML. Термин имеет два определения: Новая версия языка HTML, с новыми элементами, атрибутами и новым поведением. Набор технологий, позволяющий создавать разнообразные сайты и Web-приложения.",
-          "cемантика" : "позволяет точнее описывать, что из себя представляет ваш контент",
-          "cвязь" : "новые способы общения с сервером",
-          "cтилизация" : "создание изощренных и совершенных тем",
-          "Доступ к устройствам" : " использование разных устройств для ввода и вывода информации",
-          "Графика и эффекты" : "способы значительно разнообразить  представление",
-          "Мультимедиа" : "создание и взаимодействие с видео и звуком",
-          "Оффлайн и Хранилище" : "методы, позволяющие сохранять информацию локально на стороне клиента"
+          "name-article" : "HTML5 — последняя версия стандарта HTML. Термин имеет два определения: Новая версия языка HTML, с новыми элементами, атрибутами и новым поведением. Набор технологий, позволяющий создавать разнообразные сайты и Web-приложения.",
+          "name-article" : "позволяет точнее описывать, что из себя представляет ваш контент",
+          "name-article" : "новые способы общения с сервером",
+          "name-article" : "создание изощренных и совершенных тем",
+          "name-article" : " использование разных устройств для ввода и вывода информации",
+          "name-article" : "способы значительно разнообразить  представление",
+          "name-article" : "создание и взаимодействие с видео и звуком",
+          "name-article" : "методы, позволяющие сохранять информацию локально на стороне клиента"
         }
     },
     {
