--- a/project.json
+++ b/project.json
@@ -50,7 +50,7 @@
     },
     {
         "title": "Vue.js",
-        "src":"../static/img/Vue.png",
+        "src":"../static/img/Vue.js_.png",
         "description": {
           "Vue" : "прогрессивный JavaScript-фреймворк с открытым исходным кодом для создания пользовательских интерфейсов. Является реализацией идей реактивного программирования. Легко интегрируется в проекты с использованием других JavaScript-библиотек, благодаря постепенно внедряемой экосистеме. Vue может функционировать как web-фреймворк, помогающий разрабатывать продвинутые одностраничные приложения.",
           "Vue.js" : "популярный JavaScript фреймворк, созданный для организации и упрощения веб-разработки.Проект стремится сделать идеи разработки пользовательских интерфейсов в вебе более доступными (компоненты, декларативный пользовательский интерфейс, горячая перезагрузка, отладка во времени и т.д.). Фреймворк нацелен быть менее строгим, что делает его проще для подхвата разработчиками. Предлагает инкрементально адаптируемую архитектуру. Ядро фокусируется на декларативном рендеринге, композиции компонент и может быть встроен в существующие страницы. Продвинутые возможности, требующиеся для комплексных приложений (такие как маршрутизация, управление состоянием и инструментарий сборки), распространяются через официально поддерживаемые библиотеки и пакеты."
